# UnderTaker141

./: .gitignore  LICENSE  README.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
src/: __version__.py  app.py  pyproject.toml  screens.yaml  settings.yaml
src/database/: database.py  games.db
src/screens/: library.py  main.py  settings.py
src/utils/: __init__.py  fetch_feed.py  qbt.py  scraper.py  settings.py  thread_with_return.py
src/widgets/border/: __init__.py  border.py
src/widgets/core/: __init__.py  core.py  plugin.py
src/widgets/game/: __init__.py  game.py
src/widgets/gamelist/: Gamelist.py  __init__.py
src/widgets/navigation/: __init__.py  navigation.py
src/widgets/searchbar/: __init__.py  searchbar.py
